{
[eval]:1
const { Pool } = require('pg'); const pool = new Pool({connectionString: process.env.DATABASE_URL}); pool.query('SELECT DISTINCT movie_category FROM (SELECT DISTINCT category as movie_category FROM movies UNION SELECT DISTINCT category as movie_category FROM series UNION SELECT DISTINCT category as movie_category FROM channels) sub ORDER BY movie_category').then(r = console.log(JSON.stringify(r.rows)); pool.end(); }).catch(e = console.error(e.message); pool.end(); });
                                                                                                                                                                                                                                                                                                                                                                                                                   ^

SyntaxError: missing ) after argument list
    at makeContextifyScript (node:internal/vm:185:14)
    at node:internal/process/execution:107:22
    at [eval]-wrapper:6:24
    at runScript (node:internal/process/execution:101:62)
    at evalScript (node:internal/process/execution:133:3)
    at node:internal/main/eval_string:51:3

Node.js v20.20.2
